--- a/index.html
+++ b/index.html
@@ -12,20 +12,11 @@
 		<meta name="keywords" content="portfolio, Kuldeep Sonara, software development, projects, skills">
 		<meta name="author" content="Kuldeep Sonara">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="assets/css/main.css">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+		<link rel="stylesheet" href="assets/css/main.min.css"> <!-- Minified CSS -->
+		<noscript><link rel="stylesheet" href="assets/css/noscript.min.css"></noscript>
 		<link rel="icon" href="images/favicon.png" type="image/x-icon">
-		
-		<!-- Google Tag Manager -->
-		<!--  -->
-		<!-- End Google Tag Manager -->
-		
-		<!-- Open Graph Meta Tags for Social Media -->
-		<meta property="og:title" content="Portfolio | Kuldeep Sonara">
-		<meta property="og:description" content="Welcome to my portfolio website. Explore my projects and skills in software development.">
-		<!-- <meta name="twitter:image" content="https://example.com/twitter-image.jpg"> Replace with your actual image URL -->
-		
-		<!-- Other scripts or styles in the head section -->
+		<!-- Use async or defer for JavaScript -->
+		<script defer src="assets/js/main.min.js"></script>
 	</head>
 	<!-- <script>(
 		function(w,d,s,l,i){
