--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h2>Netflix With ML Integration</h2>
+								<h2>Recommendation System with ML</h2>
 								<ul>
 									<li><b>Tools:</b> React.js, Node.js, MongoDB, Python (ML)</li>
 									<li>Developed a full-stack application using React.js, Node.js, MongoDB, and Python for ML, improving user interaction and retention.</li>
@@ -329,7 +329,7 @@
 							</div>
 							<div class="content">
 								<div class="inner">
-									<h2>Fashion Club App</h2>
+									<h2>Jwt-Authorization-Login With Single plse to login all</h2>
 									<ul>
 										<li><b>Tools:</b> React, Node, Docker, Arduino Programming</li>
 										<li> Smoothly rolled out a one-size-fits-all login system, keeping the good times rolling with auto token refresh.</li>
